[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Planet_tools"
dynamic = ["version"]
description = "Package with useful functions for exoplanetary research"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Babatunde Akinsanmi", email = "babatundeakinsanmi@gmail.com" }
]
requires-python = ">=3.8"
keywords = ["exoplanets", "astronomy", "transit", "radial velocity"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "astropy",
    "astroquery",
    "uncertainties",
    "numba==0.61.2",
    "ldtk==1.7.0",
    "pycheops",
    # "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest>=3.7"]

[project.urls]
Homepage = "https://github.com/tundeakins/Planet_tools"
Repository = "https://github.com/tundeakins/Planet_tools"

[tool.setuptools.dynamic]
version = { attr = "Planet_tools.__version__.__version__" }

[tool.setuptools.packages.find]
where = ["."]
